# era_automation

./: Cargo.toml  rust-toolchain.toml
src/: consts.rs  container.rs  crafting.rs  ground_items.rs  items.rs  knowledge.rs  lib.rs  main.rs  map.rs  notification.rs  player.rs  resources.rs  sprites.rs  village.rs
src/container/: components.rs  mod.rs  systems.rs
src/crafting/: components.rs  mod.rs  systems.rs
src/debug/: components.rs  mod.rs  systems.rs
src/ground_items/: components.rs  mod.rs  systems.rs
src/items/: components.rs  mod.rs
src/knowledge/: components.rs  data.rs  mod.rs  systems.rs
src/knowledge/data/: mod.rs
src/machines/: bundles.rs  components.rs  mod.rs  systems.rs  windmill.rs
src/machines/harvester/: bundles.rs  components.rs  systems.rs
src/machines/network/: components.rs  systems.rs
src/machines/picker_upper/: bundles.rs  components.rs  systems.rs
src/machines/transporter/: bundles.rs  components.rs  systems.rs
src/machines/windmill/: bundles.rs  components.rs  systems.rs
src/map/: components.rs  mod.rs  systems.rs
src/notification/: components.rs  mod.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/resources/: bundles.rs  components.rs  mod.rs  systems.rs
src/sprites/: components.rs  mod.rs  systems.rs
src/utils/: math.rs  mod.rs  noise.rs  query.rs  rand.rs  run_if.rs
src/village/: components.rs  mod.rs  systems.rs
src/weather/: components.rs  mod.rs  systems.rs
