[package]
name = "era_automation"
version = "0.1.0"
edition = "2024"
default-run = "game"

[dependencies]
bevy = {version = "0.17.2", features = ["dynamic_linking"]}
bevy_egui = "0.38.0"
# Dyn- compatible version
libnoise = {git = "https://github.com/adamthedash/libnoise-rs.git", branch = "feature/dyn_compat"}
num_enum = "0.7.4"
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
